Fix up javadocs, align with the Wiki.